; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_sysevent.c_sysevent_attach_attributes.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_sysevent.c_sysevent_attach_attributes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysevent = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sysevent_attach_attributes(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.sysevent*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to %struct.sysevent*
  store %struct.sysevent* %7, %struct.sysevent** %5, align 8
  %8 = load %struct.sysevent*, %struct.sysevent** %5, align 8
  %9 = getelementptr inbounds %struct.sysevent, %struct.sysevent* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.sysevent*, %struct.sysevent** %5, align 8
  %16 = getelementptr inbounds %struct.sysevent, %struct.sysevent* %15, i32 0, i32 0
  store i32* %14, i32** %16, align 8
  ret i32 0
}

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
